--- a/static/main/security.css
+++ b/static/main/security.css
@@ -8,30 +8,31 @@ button {
     background-color:transparent;
   }
   #header_serve {
-    height: 80px;
+    height: 60px;
     padding: 1rem;
     color: white;
     background: hsl(0, 0%, 100%);
     font-weight: bold;
     justify-content: space-between;
     align-items: center;
+    
   
 }
 
 #headi {
-    display: grid;
-    grid-template-columns: 9fr 1fr 1fr;
-    font-size: 30px;
+  font-weight: bold;
+    line-height: 5px;
+    font-size: 25px;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 0%;
     right: 0;
     padding: 8px 12px;
-    height: 40px;
+    height: 10px;
     padding: 2rem;
     color: white;
     align-items: center;
-    background: hsl(211, 100%, 62%);
+    background: #87CEFA;
     justify-content: space-between;
 }
 #headi .box{
@@ -43,7 +44,7 @@ button {
 
 
   #notice {
-    background-color:#0f9df5;
+    background-color: #87CEFA;
     border-radius: 30px;
     border-color: #ffffff;
     border-style: solid;
@@ -56,43 +57,44 @@ button {
     color: white;
     height: auto;
     padding: 1rem;
+    border-radius: 10px 10px 10px 10px;
 }
 
 
 #bt{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  background-color:#0f9df5;
-  text-align: center;
+  background-color:#ffffff;
   min-height: 0;
   padding: 0.5rem;
   justify-content: space-between;
-    align-items: center;
+  align-items: center;
+  border-radius: 0px 0px 5px 5px;
 }
 
 .div1 {
-  border: 1px solid;
-  width: 100px;
-  height: 50px;
+  border: 1px solid #87CEFA;
+  width: 90%;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-width: thick;
-  background-color:#ffffff;
-  font-weight: bold;
-  color: #000000;
+  background-color:#87CEFA;
+  color:#ffffff;
+  border-radius: 2px 2px 2px 2px;
 } 
 .div2 {
   border: 1px solid;
-  width: 100px;
-  height: 50px;
+  width: 90%;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-width: thick;
   background-color:#ffffff;
-  font-weight: bold;
-  color: #0f9df5;
+  color:#87CEFA;
+  border-radius: 2px 2px 2px 2px;
 } 
 
 
@@ -100,7 +102,7 @@ button {
     padding: 1rem;
     padding-bottom: 0rem;
     background-color:#ffffff;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 5px 5px 0px 0px;
     overflow:hidden;
     height:auto;
     font-size: 30px;
@@ -112,10 +114,10 @@ button {
     padding: 1rem;
     padding-top: 0rem;
     background-color:#ffffff;
-    border-radius: 0px 0px 10px 10px;
+    border-radius: 0px 0px 0px 0px;
     overflow:hidden;
     height:auto;
-    font-size: 20px;
+    font-size: 25px;
     color: rgb(0, 0, 0);
     word-wrap:break-word;
     word-break:break-all;
