--- a/templates/conv.html
+++ b/templates/conv.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html lang = "ko">
 <head>
-    {% load static %}
     <title>ccc</title>
-    <link rel="stylesheet" href="{% static 'main/conv.css'%}">
+    <link rel="stylesheet" href="convenient.css">
 </head>
 <body>
-
-<div class="wrap">
-    <div class="title">
-       <h2>편의시설</h2>
+    {% for content in contents %}   
+    <div class="cov">
+       <h2>편의시설</h2>     
+            <div class="title">
+                <p>{{content.title}}</p>
+            </div>
+            <div class="imgBox">
+                <img src="{% static 'main/yogum.png'%}">
+            </div>        
+            <div class="inform">
+                <p>위치: {{content.location}}</p>
+                <p>이용시간: {{content.time}}</p>
+                <p>이용요금: {{content.cost}}</p>
+                <p>연락처: {{content.number}}</p>
+            </div>          
     </div>
-{% for content in contents %}
-    <div class="image">
-        <div class="imgBox">
-               <p>{{content.title}}</p>
-        </div>
-
-        <div class="inform">
-                <p>위치:{{content.location}}</p>
-                <p>이용 시간 :{{content.time}}</p>
-                <p>이용 안내 :{{content.name}}</p>
-                <p>이용 요금 :{{content.cost}}</p>
-        </div>
-    </div>
-</div>
 {% endfor %}
 </body>
 </html>
