--- a/static/main/conv.css
+++ b/static/main/conv.css
@@ -6,9 +6,8 @@
    
 }
 
-li{list-style: none;}
-
-body {
+body {  
+    width: 100%;   
     font-family: 'Hahmlet', serif;
     text-align: center;
     align-content: center;
@@ -16,41 +15,45 @@ body {
     justify-content: center;
     height: 80vh;
     background: #fff
-}
-    .wrap {width: 100%; 
-          background: #fff;
-          padding: 0px;
+   
  }
-    .title {
+    .cov {
         position: fixed; 
         width: 100%; 
-        height:60px; 
+        height:80px; 
         background: #87CEFA; 
-        margin-top: 0;
+
     }
-    .title h2 { 
-        position: fixed;
-        top: 5px;
-        left: 20px;
-        right: 0;
+
+    .cov h2{
+        position: fixed; 
+        text-align: left;
+        width: 100%; 
+        margin-top: 10px;
+        margin-left: 10px;
+        color: #fff;
+        font-size: 40px;
+
+    }
+    .cov .title p { 
+        margin-top: 100px;
         font-size: 30px; 
         padding: 0px; 
-        text-align: left; 
-        color: #fff; 
-        border-color: 3px black;
+        text-align: center; 
+        color: rgb(11, 11, 11); 
+        border-color: 3px solid black;
 
     }
 
-    .image .imgBox {
+    .cov .imgBox img {
         width: 100%; 
-        height: 400px;
-        background: url(https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjA1MThfMTc5%2FMDAxNjUyODc5NzcyNzQ0.i8jY1c4AqB4H2CA8Fy9pICnE0Slvum-CWEVyQVFtWYAg.vG5NDmpnOKGf3D-NVPP05stK6zfasYhti5Oqf26KaEMg.JPEG.do-da%2FKakaoTalk_20220422_110713272_01.jpg&type=sc960_832)no-repeat left 0px top 0px/cover; padding: 30px;
+        height: 300px;
         border: 5px solid #87CEFA;  
         border-radius: 5px; 
-        margin-top:80px; 
+        margin-top: 20px;
     
     }
-    .image .imgBox p {
+    .cov .image .imgBox p {
         width: 100%;
         font-size: 30px; 
         background-color: #fff; 
@@ -60,13 +63,13 @@ body {
         border-radius: 50px 50px 50px 50px;
         color: #070808;
     }
-    .image .inform{
+    .cov .inform {
         background:#fff; 
         width:100%; 
         height: 130px;  
         border: 5px solid#87CEFA;  
         border-radius: 5px; 
-        margin-top:5px;
+        margin-top:1px;
         font-size: 20px; 
         color:rgb(8, 8, 8);
     }
