--- a/templates/conv.html
+++ b/templates/conv.html
@@ -2,7 +2,7 @@
 <html lang = "ko">
 <head>
     <title>ccc</title>
-    <link rel="stylesheet" href="convenient.css">
+    <link rel="stylesheet" href="conv.css">
 </head>
 <body>
     {% for content in contents %}   
