--- a/templates/view.html
+++ b/templates/view.html
@@ -40,12 +40,28 @@
                 {% if user.is_authenticated %} 
                 <form action="/main/board/{{ board.id }}/comment" method="POST">
                     {%csrf_token%}
-                    <input type="text" name="comment" placeholder="댓글을 입력하세요">
-                    
-                    <input type="checkbox" name="anonymous" values="'y">
-                    <span style="font-size: 0.7em;">익명</span>
+                    <input id="input1" type="text" name="comment" placeholder="댓글을 입력하세요">
+                    <input id="input2" type="checkbox" name="anonymous" values="'y">
+                    <span style="font-size: 1em;">익명</span>
+                    <input id="input3" type="submit" value="댓글 작성하기">
+                    <style>
+                        #input1 {
+                            width: 300px;
+                            height: 50px;
+                            border-top: none;
+                            border-left: none;
+                            border-right: none;
+                            border-bottom: 3px solid #87CEFA; 
+                        }
+                        #input3 {
+                            width: 100px;
+                            height: 55px;
+                            background-color: white;
+                            border:  1px solid #87CEFA;
+                            border-radius: 3px;
+                        }
 
-                    <input type="submit" value="댓글 작성하기">
+                    </style>
                 </form>
                 {% endif %}
             <div class="comment_view">
