--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
     <div id="main">
         
         <div class="box">
-            <button type="button" class="btm_image" id="img_btn">
+            <button type="button" onclick="location.href='/main/parking'" class="btm_image" id="img_btn">
                 <img  src="{% static 'main/car.png'%}"  height="200px">
             </button>
             <p>
