--- a/templates/list.html
+++ b/templates/list.html
@@ -10,7 +10,7 @@
 <body>
 <div class="board_wrap">
     <div>
-        <button onclick="history.back()">뒤로가기</button>
+        <a href="#" class="myButton">홈 화면</a>
     </div>
     <div class="board_title">
         <strong>{{ board_type.name }}</strong>
