--- a/static/main/style.css
+++ b/static/main/style.css
@@ -45,7 +45,7 @@ a {
     min-width: 80px;
     margin-left: 10px;
     padding: 10px;
-    border: 1px solid #000;
+    border: 1px solid  #87CEFA;
     border-radius: 2px;
     font-size: 1.4rem;
 }
@@ -55,13 +55,13 @@ a {
 }
 
 .bt_wrap a.on {
-    background: #000;
+    background: #bddbfa;
     color: #fff;
 }
 
 .board_list {
     width: 100%;
-    border-top: 2px solid #000;
+    border-top: 2px solid #87CEFA;
 }
 
 .board_list > div {
@@ -70,11 +70,36 @@ a {
 }
 
 .board_list > div.top {
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #bddbfa;
+}
+
+.myButton {
+	box-shadow:inset 0px 1px 0px 0px #dcecfb;
+	background:linear-gradient(to bottom, #bddbfa 5%, #87CEFA 100%);
+	background-color:#bddbfa;
+	border-radius:6px;
+	border:1px solid #84bbf3;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #528ecc;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #87CEFA 5%, #bddbfa 100%);
+	background-color:#87CEFA;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
 
 .board_list > div:last-child {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #87CEFA;
 }
 
 .board_list > div > div {
@@ -98,7 +123,7 @@ a {
 }
 
 .board_list .top .title {
-    text-align: center;
+    text-align: left;
 }
 
 .board_list .writer {
@@ -125,7 +150,7 @@ a {
     height: 32px;
     box-sizing: border-box;
     vertical-align: middle;
-    border: 1px solid #ddd;
+    border: 1px solid #87CEFA;
     border-left: 0;
     line-height: 100%;
 }
@@ -142,29 +167,29 @@ a {
 }
 
 .board_page a.num.on {
-    border-color: #000;
-    background: #000;
+    border-color: #87CEFA;
+    background: #bddbfa;
     color: #fff;
 }
 
 .board_page a:first-child {
-    border-left: 1px solid #ddd;
+    border-left: 1px solid #87CEFA;
 }
 
 .board_view {
     width: 100%;
-    border-top: 2px solid #000;
+    border-top: 2px solid #87CEFA;
 }
 
 .board_view .title {
     padding: 20px 15px;
-    border-bottom: 1px dashed #ddd;
+    border-bottom: 1px dashed #bddbfa;
     font-size: 2rem;
 }
 
 .board_view .info {
     padding: 15px;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #bddbfa;
     font-size: 0;
 }
 
@@ -186,7 +211,7 @@ a {
     display: block;
     width: 1px;
     height: 13px;
-    background: #ddd;
+    background: #80b5ea;
 }
 
 .board_view .info dl:first-child::before {
@@ -199,10 +224,6 @@ a {
     font-size: 1.4rem;
 }
 
-.board_view .info dl dt {
-
-}
-
 .board_view .info dl dd {
     margin-left: 10px;
     color: #777;
@@ -210,13 +231,13 @@ a {
 
 .board_view .cont {
     padding: 15px;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #87CEFA;
     line-height: 160%;
     font-size: 1.4rem;
 }
 
 .board_write {
-    border-top: 2px solid #000;
+    border-top: 2px solid #87CEFA;
 }
 
 .board_write .title,
@@ -225,8 +246,8 @@ a {
 }
 
 .board_write .info {
-    border-top: 1px dashed #ddd;
-    border-bottom: 1px solid #000;
+    border-top: 1px dashed #bddbfa;
+    border-bottom: 1px solid #87CEFA;
     font-size: 0;
 }
 
@@ -270,7 +291,7 @@ a {
 }
 
 .board_write .cont {
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #87CEFA;
 }
 
 .board_write .cont textarea {
