--- a/static/main/login.css
+++ b/static/main/login.css
@@ -2,14 +2,19 @@
 
 * {margin: 0; padding: 0; box-sizing: border-box;}
 body {
+    position: relative;
+	width: 100%;
+    margin: 0;
+	overflow: hidden;
     font-family: 'Hahmlet', serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background: #87CEFA
-
-
+    
+   
+    
 }
  body::before{
     content: "";
@@ -20,46 +25,49 @@ body {
 
  .lo {position: relative; z-index: 2;}
  .lo h1 {
-    border: 2px solid #FFF;
-    border-radius: 40px 0px 40px 0px;
+    border: 5px solid #FFF;
+    border-radius: 50px 0px 50px 0px;
     border-color: #FFF;
     margin-top: 20px;
-    font-size: 40px; color: #fff;
+    margin-bottom: 20px;
+    font-size: 90px; color: #fff;
     text-align: center;
-    margin-bottom: 60px
-
-
+    
+  
  }
- .int-area {
-    width: 400px; position: relative;
-    margin-top: 30px;
-
+ .int-area { 
+    width: 750px; position: relative;
+    margin-top: 10px;
+    
 }
 .int-area:first-child {margin-top: 0;}
 .int-area input {
-    text-decoration: 1px #fff;
-    border: 1px solid #FFF;
+    
     width: 100%;
-    padding: 20px 10px 10px;
+    padding: 60px 10px 10px;
+    margin-bottom: 0;
     background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #FFF;
-    font-size: 22px; color: #fff;
-    outline: 1px #fff;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    border-bottom: 2px solid #FFF;
+    font-size: 40px; color: #fff;
+   
  }
 .int-area label {
-    position: absolute; left: 10px; top: 15px;
-    font-size: 22px; color: #FFF;
-    transition: all .5s ease;
+    position: absolute; left: 10px;
+    margin-bottom: 70px;
+    font-size: 40px; color: #FFF;
+    
 
 }
 
 .btn-area {margin-top: 30px;}
 .btn-area button {
-    width: 100%; height: 50px;
+    width: 100%; height: 90px;
     background: #fff;
     color: #87CEFA;
-    font-size: 22px;
+    font-size: 60px;
     border: #FFF;
     border-radius: 25px;
     cursor: pointer;
@@ -71,7 +79,7 @@ body {
     text-align: center;
 }
 .caption a {
-    font-size: 18px; color: #FFF;
+    font-size: 50px; color: #FFF;
     text-decoration: none;
 }
 
