STYLE: Change pagename

--- a/templates/conv.html
+++ b/templates/conv.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang = "ko">
 <head>
-    <title>ccc</title>
+    {% load static %}
+    <title>보금자리</title>
     <link rel="stylesheet" href="conv.css">
 </head>
 <body>
