STYLE: Change css path

--- a/templates/conv.html
+++ b/templates/conv.html
@@ -3,7 +3,7 @@
 <head>
     {% load static %}
     <title>보금자리</title>
-    <link rel="stylesheet" href="conv.css">
+    <link rel="stylesheet" href="{% static 'main/conv.css'%}">
 </head>
 <body>
     {% for content in contents %}   
