--- a/static/main/style.css
+++ b/static/main/style.css
@@ -34,18 +34,29 @@ a {
     font-size: 1.4rem;
 }
 
-.bt_wrap {
+.bt_wrap1 {
     margin-top: 30px;
     text-align: center;
     font-size: 0;
-}
-
-.bt_wrap a {
     display: inline-block;
     min-width: 80px;
     margin-left: 10px;
     padding: 10px;
     border: 1px solid  #87CEFA;
+    border-radius: 2px;
+    font-size: 1.4rem;
+}
+.bt_wrap {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 0;
+}
+.bt_wrap a {
+    display: inline-block;
+    min-width: 80px;
+    margin-left: 10px;
+    padding: 10px;
+    border: 1px solid #87CEFA;
     border-radius: 2px;
     font-size: 1.4rem;
 }
