--- a/templates/view.html
+++ b/templates/view.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시판</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'main/style.css'%}">
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css.css'%}">
 </head>
 <body>
     <div class="board_wrap">
         <div class="board_title">
-            <strong>공지사항</strong>
-            <p>공지사항을 빠르고 정확하게 안내해드립니다.</p>
+            <strong>{{ board_type.name }}</strong>
+            <p>{{ board_type.description }}</p>
         </div>
         <div class="board_view_wrap">
             <div class="board_view">
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="comment">
-                {% if user.is_authenticated %} 
+                {% if user.is_authenticated %}
                 <form action="/main/board/{{ board.id }}/comment" method="POST">
                     {%csrf_token%}
                     <input id="input1" type="text" name="comment" placeholder="댓글을 입력하세요">
@@ -51,7 +51,7 @@
                             border-top: none;
                             border-left: none;
                             border-right: none;
-                            border-bottom: 3px solid #87CEFA; 
+                            border-bottom: 3px solid #87CEFA;
                         }
                         #input3 {
                             width: 100px;
@@ -60,6 +60,7 @@
                             border:  1px solid #87CEFA;
                             border-radius: 3px;
                         }
+
                     </style>
                 </form>
                 {% endif %}
