--- a/templates/conv.html
+++ b/templates/conv.html
@@ -10,17 +10,19 @@
     <div class="cov">
        <h2>편의시설</h2>     
             <div class="title">
-                <p>{{content.title}}</p>
+                <strong>{{content.title}}</strong>
             </div>
             <div class="imgBox">
                 <img src="{% static 'main/yogum.png'%}">
-            </div>        
+            </div>
+            {% for content in contents %}           
             <div class="inform">
                 <p>위치: {{content.location}}</p>
                 <p>이용시간: {{content.time}}</p>
                 <p>이용요금: {{content.cost}}</p>
                 <p>연락처: {{content.number}}</p>
-            </div>          
+            </div>   
+            {% endfor %}       
     </div>
     {% endfor %}
 </body>
