--- a/static/main/conv.css
+++ b/static/main/conv.css
@@ -35,7 +35,7 @@ body {
         font-size: 40px;
 
     }
-    .cov .title p { 
+    .cov .title strong { 
         margin-top: 100px;
         font-size: 30px; 
         padding: 0px; 
