--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         보금자리
     
         <div class="box">
-            <button type="button" class="btm_image; float-right" id="img_btn">
+            <button onclick="location.href='/main/notification'" type="button" class="btm_image; float-right" id="img_btn">
                 <img  src="{% static 'main/alram.png'%}"  height="50px">
             </button>
         </div>
