Revert "Update index.html"

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
         </div>
         
         <div class="box">
-            <button onclick="location.href='/logout'" style = "background-color: #ffffff; height: 50px; weight:120px; font-weight: bold; font-size: 25px; " type="button" class="btm_image; float-right" id="img_btn">
-                로그아웃
+            <button type="button" class="btm_image; float-right" id="img_btn">
+                <img  src="{% static 'main/user.png'%}"  height="50px">
             </button>
         </div>
 
