--- a/static/main/conv.css
+++ b/static/main/conv.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Hahmlet&family=Noto+Sans+KR:wght@500&display=swap');
 
-* {margin: 0; 
-   padding: 0;  
+* {margin: 0;  
+   padding:0;
    box-sizing: border-box;
    
 }
@@ -10,15 +10,16 @@ body {
     width: 100%;   
     font-family: 'Hahmlet', serif;
     text-align: center;
-    align-content: center;
+    align-content: center; 
     display: flex;
     justify-content: center;
-    height: 80vh;
+    height: 100vh;
     background: #fff
    
- }
+}
+
     .cov {
-        position: fixed; 
+        position: fixed;  
         width: 100%; 
         height:80px; 
         background: #87CEFA; 
@@ -35,41 +36,36 @@ body {
         font-size: 40px;
 
     }
-    .cov .title strong { 
-        margin-top: 100px;
-        font-size: 30px; 
+
+
+    .cov .title p { 
+        margin-top:80px;
+        font-size: 50px; 
         padding: 0px; 
         text-align: center; 
         color: rgb(11, 11, 11); 
-        border-color: 3px solid black;
+        
 
     }
+
 
     .cov .imgBox img {
         width: 100%; 
-        height: 300px;
-        border: 5px solid #87CEFA;  
+        height: 500px;
+        border: 7px solid #87CEFA;  
         border-radius: 5px; 
-        margin-top: 20px;
-    
+        margin-top: 0;
+       
     }
-    .cov .image .imgBox p {
-        width: 100%;
-        font-size: 30px; 
-        background-color: #fff; 
-        margin-bottom: 0; 
-        margin-top: 20px; 
-        border: 2px solid #87CEFA; 
-        border-radius: 50px 50px 50px 50px;
-        color: #070808;
-    }
-    .cov .inform {
+
+    .cov .inform  {
         background:#fff; 
         width:100%; 
-        height: 130px;  
-        border: 5px solid#87CEFA;  
+        height: 190px;  
+        border: 7px solid #87CEFA;  
         border-radius: 5px; 
         margin-top:1px;
-        font-size: 20px; 
+        font-size: 30px; 
         color:rgb(8, 8, 8);
+       
     }
