--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
         
 
         <div class="box">
-            <button type="button" class="btm_image" id="img_btn">
+            <button type="button" class="btm_image" id="img_btn" onclick="location.href='/main/conv'">
                 <img  src="{% static 'main/pyen.png'%}"  height="200px">
             </button>
             <p>
