--- a/templates/parking.html
+++ b/templates/parking.html
@@ -16,7 +16,7 @@
             <p><input type="date" name="date" style="text-align: center;"></p>
             <h5 class="alert alert-primary">차량번호</h1>
             <p><input name="car" type="text"></p>
-            <p><input type="submit" value="등록"></p>
+            <p><input type="submit" value="등록" onclick=alert("등록완료")></p>
         </form>
     </div>
     <div style="padding: 70;"></div>
