--- a/templates/conv.html
+++ b/templates/conv.html
@@ -6,26 +6,29 @@
     <link rel="stylesheet" href="{% static 'main/conv.css'%}">
 </head>
 <body>
-    <div class="cov">
-        <h2>편의시설</h2>
-       
-            {% for content in contents %}
-        
-            <div class="title">
-                <p><{{content.title}}></p>
-            </div>
+    <div class="div">
+        <div class="cov">
+            <h2>편의시설</h2>
+        </div>
+                
+        {% for content in contents %}
+            
+        <div class="title" >
+            <p><{{content.title}}></p>
+        </div>
 
-            <div class="imgBox">
-                <img src="{% static 'main/{{content.picture}}'%}">
-            </div>
+        <div class="imgBox">
+            <img src="{% static 'main/{{content.picture}}'%}">
+        </div>
 
-            <div class="inform">
-                <p>위치: {{content.location}}</p>
-                <p>이용시간: {{content.time}}</p>
-                <p>이용요금: {{content.cost}}</p>
-                <p>연락처: {{content.number}}</p>
-            </div>
-            {% endfor %}               
+        <div class="inform">
+            <p>위치: {{content.location}}</p>
+            <p>이용시간: {{content.time}}</p>
+            <p>이용요금: {{content.cost}}</p>
+            <p>연락처: {{content.number}}</p>
+        </div>
+        {% endfor %}   
+
     </div>
 </body>
 </html> 
