--- a/static/main/conv.css
+++ b/static/main/conv.css
@@ -18,7 +18,12 @@ body {
    
 }
 
-    .cov {
+.div{
+    width: 100%;
+
+}
+
+    .div .cov {
         position: fixed;  
         width: 100%; 
         height:80px; 
@@ -26,8 +31,7 @@ body {
 
     }
 
-    .cov h2{
-        position: fixed; 
+    .div .cov h2{
         text-align: left;
         width: 100%; 
         margin-top: 10px;
@@ -38,7 +42,7 @@ body {
     }
 
 
-    .cov .title p { 
+    .div .title p { 
         margin-top:80px;
         font-size: 50px; 
         padding: 0px; 
@@ -49,7 +53,7 @@ body {
     }
 
 
-    .cov .imgBox img {
+    .div .imgBox img {
         width: 100%; 
         height: 500px;
         border: 7px solid #87CEFA;  
@@ -58,7 +62,7 @@ body {
        
     }
 
-    .cov .inform  {
+    .div .inform  {
         background:#fff; 
         width:100%; 
         height: 190px;  
