--- a/templates/write.html
+++ b/templates/write.html
@@ -35,7 +35,7 @@
             </div>
             <div class="bt_wrap">
                 <input type="submit" value="등록">
-                <a href="list.html">취소</a>
+                <a href="/board/{{board_type.id}}">취소</a>
             </div>
         </form>
         </div>
