--- a/templates/write.html
+++ b/templates/write.html
@@ -34,7 +34,7 @@
 
             </div>
             <div class="bt_wrap">
-                <input type="submit" value="등록">
+                <a><input type="submit" value="등록"></a>
                 <a href="/board/{{board_type.id}}">취소</a>
             </div>
         </form>
