--- a/templates/write.html
+++ b/templates/write.html
@@ -34,8 +34,16 @@
 
             </div>
             <div class="bt_wrap">
-                <a><input type="submit" value="등록"></a>
+                <a><input id="sungbin" type="submit"  value="등록"></a>
                 <a href="/board/{{board_type.id}}">취소</a>
+                <style>
+                #sungbin {
+                    text-align: center;
+                    background-color: white;
+                    border:  1px solid  white;
+                    border-radius: 3px;
+                }
+                </style>
             </div>
         </form>
         </div>
